--- a/ads.html
+++ b/ads.html
@@ -1,91 +1,168 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>إعلانات المكان</title>
-  <style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>إعلانات المكان</title>
+<style>
+  body {
+    font-family: 'Cairo', sans-serif;
+    background: #f9f9f9;
+    margin: 0;
+    padding: 15px;
+  }
+  header {
+    text-align: center;
+    margin-bottom: 15px;
+  }
+  header h2 {
+    font-size: 22px;
+    color: #333;
+  }
+  .ads-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    gap: 15px;
+  }
+  .card {
+    background: #fff;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .card img.main-img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 6px;
+  }
+  .card h4 {
+    margin: 10px 0 5px;
+    font-size: 16px;
+    color: #222;
+  }
+  .video-frame {
+    width: 100%;
+    height: 150px;
+    margin-top: 8px;
+    border: none;
+    border-radius: 6px;
+  }
+  .extra-images {
+    margin-top: 8px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 4px;
+  }
+  .extra-images img {
+    width: 50px;
+    height: 50px;
+    border-radius: 4px;
+    object-fit: cover;
+  }
+  .youtube-link {
+    margin-top: 8px;
+    display: block;
+    color: #e91e63;
+    font-weight: bold;
+    text-decoration: none;
+  }
+  .no-ads {
+    text-align: center;
+    color: #777;
+    font-size: 18px;
+    margin-top: 20px;
+  }
+  .back-btn {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 8px 14px;
+    background: #2196f3;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    text-decoration: none;
+    font-size: 14px;
+  }
+  /* ✅ Dark Mode */
+  @media (prefers-color-scheme: dark) {
     body {
-      font-family: 'Cairo', sans-serif;
-      margin: 0;
-      padding: 15px;
-      background: #f4f4f4;
+      background: #121212;
+      color: #ddd;
     }
-    .ads-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-      gap: 12px;
+    .card {
+      background: #1e1e1e;
+      box-shadow: 0 2px 8px rgba(255,255,255,0.05);
     }
-    .ad-card {
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-      padding: 8px;
-      text-align: center;
+    .back-btn {
+      background: #4cafef;
     }
-    .ad-card img {
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 6px;
-    }
-    .ad-card h4 {
-      margin: 6px 0;
-      font-size: 14px;
-    }
-    .no-ads {
-      text-align: center;
-      margin-top: 40px;
-      font-size: 18px;
-      color: #777;
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <body>
-  <h2 style="text-align:center;">إعلانات المكان</h2>
-  <div class="ads-grid" style="display:grid;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));gap:12px;margin:15px;"></div>
-</body>
+<header>
+  <h2>إعلانات المكان</h2>
+  <a href="index.html" class="back-btn">⬅ العودة</a>
+</header>
 
- <script>
+<div class="ads-grid"></div>
+
+<script>
+const adsContainer = document.querySelector(".ads-grid");
+const params = new URLSearchParams(window.location.search);
+const placeId = params.get("place");
+
+// ✅ رابط الـ JSON API
+const API_URL = "https://script.google.com/macros/s/AKfycbxkKrHyeEAgSkLz2QHzSgA5w09dIvfFJgDUMkP373f-VVAZmahHalr0GOYojqK41x6E/exec";
+
 async function loadAds() {
   try {
-    const params = new URLSearchParams(window.location.search);
-    const placeId = params.get("place");
-    console.log("Place ID:", placeId);
+    const res = await fetch(API_URL);
+    const data = await res.json();
+    console.log("Fetched Ads Data:", data);
 
-    const response = await fetch("https://script.google.com/macros/s/AKfycbxkKrHyeEAgSkLz2QHzSgA5w09dIvfFJgDUMkP373f-VVAZmahHalr0GOYojqK41x6E/exec");
-    const data = await response.json();
-
-    console.log("Fetched Data:", data);
-
-    const adsContainer = document.querySelector(".ads-grid");
-
-    // ✅ فلترة الإعلانات حسب المكان والحالة
-    const ads = data.ads.filter(ad =>
-      ad["معرف المكان"].trim() === placeId.trim() && ad["حالة الاعلان"].trim() === "نشط"
-    );
-
+    const ads = data.ads.filter(ad => ad["معرف المكان"] === placeId && ad["حالة الاعلان"] === "نشط");
     console.log("Filtered Ads:", ads);
 
+    adsContainer.innerHTML = "";
+
     if (ads.length === 0) {
-      adsContainer.outerHTML = `<div class="no-ads">لا توجد إعلانات نشطة لهذا المكان</div>`;
+      adsContainer.innerHTML = "<p class='no-ads'>لا توجد إعلانات نشطة لهذا المكان.</p>";
       return;
     }
 
     ads.forEach(ad => {
       const card = document.createElement("div");
-      card.className = "ad-card";
+      card.className = "card";
+
+      // ✅ الصور الإضافية
+      const extraImages = [];
+      for (let i = 2; i <= 8; i++) {
+        if (ad[`رابط صورة${i}`]) {
+          extraImages.push(`<img src="${ad[`رابط صورة${i}`]}">`);
+        }
+      }
+
       card.innerHTML = `
-        <img src="${ad['رابط الصورة'] || 'https://via.placeholder.com/180'}" alt="إعلان">
+        <img src="${ad['رابط الصورة'] || 'https://via.placeholder.com/200'}" class="main-img">
         <h4>${ad['عنوان العرض'] || 'إعلان بدون عنوان'}</h4>
-        ${ad['رابط يوتيوب'] ? `<a href="${ad['رابط يوتيوب']}" target="_blank">مشاهدة الفيديو</a>` : ""}
+        ${ad['رابط الفيديو'] ? `<iframe src="${ad['رابط الفيديو']}" class="video-frame"></iframe>` : ""}
+        ${ad['رابط يوتيوب'] ? `<a href="${ad['رابط يوتيوب']}" target="_blank" class="youtube-link">📺 شاهد على يوتيوب</a>` : ""}
+        <div class="extra-images">${extraImages.join("")}</div>
       `;
+
       adsContainer.appendChild(card);
     });
-  } catch (error) {
-    console.error("Error loading ads:", error);
-    document.querySelector(".ads-grid").outerHTML = `<div class="no-ads">حدث خطأ في تحميل الإعلانات</div>`;
+
+  } catch (err) {
+    console.error("Error fetching ads:", err);
+    adsContainer.innerHTML = "<p class='no-ads'>حدث خطأ أثناء تحميل الإعلانات.</p>";
   }
 }
 
