--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دليل الأماكن</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="images/icon-192x192.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" href="/e-mall/images/icon-192x192.png">
+    <meta name="theme-color" content="#007bff">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -17,41 +15,39 @@
     </header>
 
     <main>
-        <div id="filters-container">
+        <section class="filters">
             <div class="filter-group">
                 <label for="city-filter">المدينة:</label>
                 <select id="city-filter">
                     <option value="">كل المدن</option>
-                </select>
+                    </select>
             </div>
             <div class="filter-group">
                 <label for="area-filter">المنطقة:</label>
                 <select id="area-filter" disabled>
                     <option value="">كل المناطق</option>
-                </select>
+                    </select>
             </div>
             <div class="filter-group">
                 <label for="activity-type-filter">نوع النشاط:</label>
                 <select id="activity-type-filter">
                     <option value="">كل الأنشطة</option>
-                </select>
+                    </select>
             </div>
-            <div class="filter-group">
-                <button id="reset-filters-button">إعادة تعيين</button>
-            </div>
-        </div>
+            <button id="reset-filters-button" class="btn-reset">إعادة تعيين</button>
+        </section>
 
-        <div id="places-container">
-            <p class="no-results">جارٍ تحميل الأماكن...</p>
-        </div>
+        <section id="places-container" class="places-grid">
+            <p class="loading-message">جاري تحميل البيانات...</p>
+        </section>
     </main>
 
     <div id="place-modal" class="modal">
         <div class="modal-content">
-            <span class="close-button">×</span>
-            <div id="modal-place-detail-name" class="modal-title"></div>
-            <div id="modal-place-detail-info" class="modal-info"></div>
-            <div id="modal-ads-container" class="modal-ads"></div>
+            <span class="close-button">&times;</span>
+            <h2 id="modal-place-detail-name"></h2>
+            <div id="modal-place-detail-info" class="place-info"></div>
+            <div id="modal-ads-container" class="ads-section"></div>
         </div>
     </div>
 
